--- a/20L2GR3/src/application/cookCleaner.fxml
+++ b/20L2GR3/src/application/cookCleaner.fxml
@@ -20,7 +20,7 @@
                </font>
             </Label>
             <Button fx:id="confirmButton" layoutX="498.0" layoutY="47.0" mnemonicParsing="false" style="-fx-background-radius: 10; -fx-background-color: #90EE90;" text="Zatwierdź wykonanie" />
-            <Button fx:id="logoutButton" layoutX="495.0" layoutY="323.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="127.0" style="-fx-background-radius: 10; -fx-background-color: #90EE90;" text="Wyloguj" />
+            <Button fx:id="logoutButton" layoutX="495.0" layoutY="323.0" mnemonicParsing="false" onAction="#wyloguj" prefHeight="26.0" prefWidth="127.0" style="-fx-background-radius: 10; -fx-background-color: #90EE90;" text="Wyloguj" />
             <Button fx:id="cancelButton" layoutX="498.0" layoutY="95.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="127.0" style="-fx-background-radius: 10; -fx-background-color: #90EE90;" text="Anuluj zadanie" />
             <TableView id="taskTableView" fx:id="taskTableView" layoutX="67.0" layoutY="54.0" prefHeight="292.0" prefWidth="413.0" style="-fx-background-radius: 10;">
               <columns>
