--- a/20L2GR3/src/application/Receptionist.fxml
+++ b/20L2GR3/src/application/Receptionist.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -39,5 +40,7 @@
       <TextArea layoutX="14.0" layoutY="117.0" prefHeight="200.0" prefWidth="158.0" />
       <Label layoutX="29.0" layoutY="87.0" prefHeight="17.0" prefWidth="128.0" text="Zamowienia dla kuchni" />
       <Button layoutX="134.0" layoutY="326.0" mnemonicParsing="false" text="Wyslij" />
+      <Button fx:id="dodajroom" layoutX="506.0" layoutY="339.0" mnemonicParsing="false" text="Zarezerwuj" />
+      <ChoiceBox fx:id="choiceroom" layoutX="431.0" layoutY="305.0" prefWidth="150.0" />
    </children>
 </Pane>
