--- a/20L2GR3/src/application/Receptionist.fxml
+++ b/20L2GR3/src/application/Receptionist.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -13,14 +14,14 @@
    <children>
       <TableView fx:id="freeRooms" layoutX="180.0" layoutY="87.0" prefHeight="200.0" prefWidth="235.0" style="-fx-background-color: #90EE90;">
         <columns>
-                <TableColumn id="idRoomf" fx:id="idRoomf" prefWidth="50" text="Id" />
+              
+              	<TableColumn id="room_numbefr" fx:id="roomNumberF" prefWidth="62.4000244140625" text="Nr_Pokoju" />
                 <TableColumn id="number_of_seatsf" fx:id="numberOfSeatsF" prefWidth="80.0" text="Miejsca" />
-                <TableColumn id="room_numbefr" fx:id="roomNumberF" prefWidth="62.4000244140625" text="Nr_Pokoju" />
-                <TableColumn id="lvlf" fx:id="lvlF" prefWidth="70.0" text="Poziom" />
+                <TableColumn id="lvlf" fx:id="lvlF" prefWidth="115" text="Poziom" />
                
        </columns>
       </TableView>
-      <Label layoutX="192.0" layoutY="22.0" style="-fx-background-color: #DC143C;" text="Zalogowany recepjonista:">
+      <Label fx:id="nick" layoutX="192.0" layoutY="22.0" style="-fx-background-color: #DC143C;" text="Zalogowany recepjonista:">
          <font>
             <Font size="18.0" />
          </font></Label>
@@ -29,15 +30,17 @@
       <CheckBox fx:id="change" layoutX="367.0" layoutY="61.0" mnemonicParsing="false" onAction="#zmien" style="-fx-background-color: #90EE90;" text="Zajęte Pokoje" />
       <TableView fx:id="takenRooms" layoutX="180.0" layoutY="87.0" prefHeight="200.0" prefWidth="400.0" style="-fx-background-color: #90EE90;">
 		<columns>
-                <TableColumn id="idRoom" fx:id="idRoom" prefWidth="50" text="Id" />
-                <TableColumn id="number_of_seats" fx:id="numberOfSeats" prefWidth="80.0" text="Miejsca" />
+                
                   <TableColumn id="room_number" fx:id="roomNumber" prefWidth="62.4000244140625" text="Nr_Pokoju" />
+                  <TableColumn id="number_of_seats" fx:id="numberOfSeats" prefWidth="80.0" text="Miejsca" />
                   <TableColumn id="lvl" fx:id="lvl" prefWidth="70.0" text="Poziom" />
-                  <TableColumn id="dates" fx:id="dates" prefWidth="160.0" text="Data_zabukowania" />
+                  <TableColumn id="dates" fx:id="dates" prefWidth="215.0" text="Data_zabukowania" />
               </columns>
       </TableView>
       <TextArea layoutX="14.0" layoutY="117.0" prefHeight="200.0" prefWidth="158.0" />
       <Label layoutX="29.0" layoutY="87.0" prefHeight="17.0" prefWidth="128.0" text="Zamowienia dla kuchni" />
       <Button layoutX="134.0" layoutY="326.0" mnemonicParsing="false" text="Wyslij" />
+      <Button fx:id="dodajroom" layoutX="506.0" layoutY="339.0" mnemonicParsing="false" text="Zarezerwuj" />
+      <ChoiceBox fx:id="choiceroom" layoutX="431.0" layoutY="305.0" prefWidth="150.0" />
    </children>
 </Pane>
