--- a/20L2GR3/src/application/Receptionist.fxml
+++ b/20L2GR3/src/application/Receptionist.fxml
@@ -4,9 +4,12 @@
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
@@ -37,10 +40,28 @@
                   <TableColumn id="dates" fx:id="dates" prefWidth="215.0" text="Data_zabukowania" />
               </columns>
       </TableView>
-      <TextArea layoutX="14.0" layoutY="117.0" prefHeight="200.0" prefWidth="158.0" />
-      <Label layoutX="29.0" layoutY="87.0" prefHeight="17.0" prefWidth="128.0" text="Zamowienia dla kuchni" />
-      <Button layoutX="134.0" layoutY="326.0" mnemonicParsing="false" text="Wyslij" />
       <Button fx:id="dodajroom" layoutX="506.0" layoutY="339.0" mnemonicParsing="false" text="Zarezerwuj" />
       <ChoiceBox fx:id="choiceroom" layoutX="431.0" layoutY="305.0" prefWidth="150.0" />
+      <MenuBar>
+        <menus>
+          <Menu mnemonicParsing="false" text="Głowna">
+            <items>
+              <MenuItem mnemonicParsing="false" onAction="#glowna" text="Glowna" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Dodaj Zadanie">
+            <items>
+              <MenuItem mnemonicParsing="false" onAction="#dodajzadanie" text="Dodaj Zadanie" />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
+      <TextField fx:id="opistask" layoutX="223.0" layoutY="100.0" prefHeight="25.0" prefWidth="168.0" visible="false" />
+      <ChoiceBox fx:id="choiceservice" layoutX="223.0" layoutY="140.0" prefWidth="168.0" visible="false" />
+      <ChoiceBox fx:id="choiceroomfortask" layoutX="223.0" layoutY="180.0" prefWidth="168.0" visible="false" />
+      <ChoiceBox fx:id="choiceuser" layoutX="223.0" layoutY="220.0" prefWidth="169.0" visible="false" />
+      <Button fx:id="addtask" layoutX="348.0" layoutY="305.0" mnemonicParsing="false" text="Dodaj zadanie" visible="false" />
+     
+    
    </children>
 </Pane>
