--- a/20L2GR3/src/application/account.fxml
+++ b/20L2GR3/src/application/account.fxml
@@ -21,7 +21,7 @@
       <TextField fx:id="name" layoutX="220.0" layoutY="81.0" />
       <ChoiceBox fx:id="choicejob" layoutX="219.0" layoutY="259.0" prefWidth="150.0" />
       <Button fx:id="btncreate" layoutX="443.0" layoutY="299.0" mnemonicParsing="false" text="Stwórz" />
-      <Button fx:id="back" layoutX="62.0" layoutY="299.0" mnemonicParsing="false" text="Cofnij" />
+      <Button fx:id="back" layoutX="62.0" layoutY="299.0" mnemonicParsing="false" onAction="#wyloguj" text="wyloguj" />
       <Text fx:id="header" fill="#2b579a" layoutX="185.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Stworz Konto">
          <font>
             <Font size="39.0" />
@@ -45,7 +45,7 @@
           </Menu>
         </menus>
       </MenuBar>
-      <TableView fx:id="accounts" layoutX="166.0" layoutY="64.0" prefHeight="200.0" prefWidth="269.0" visible="false">
+      <TableView fx:id="accounts" layoutX="79.0" layoutY="57.0" prefHeight="207.0" prefWidth="474.0" visible="false">
         <columns>
           <TableColumn fx:id="tablename" prefWidth="53.0" text="Imie" />
           <TableColumn fx:id="tablenazwisko" prefWidth="64.0" text="Nazwisko" />
