--- a/20L2GR3/src/application/manager.fxml
+++ b/20L2GR3/src/application/manager.fxml
@@ -1,47 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.chart.BubbleChart?>
-<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1">
-    <children>
-        <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: #ADD8E6;" VBox.vgrow="ALWAYS">
-            <children>
-                <Label layoutX="274.0" layoutY="14.0" prefHeight="26.0" prefWidth="72.0" text="Manager">
-                    <font>
-                        <Font name="System Bold" size="17.0" />
-                    </font>
-                </Label>
-            <ListView editable="true" layoutX="33.0" layoutY="52.0" prefHeight="272.0" prefWidth="149.0" style="-fx-background-color: #90EE90;" />
-            <TextField alignment="CENTER" layoutX="33.0" layoutY="54.0" style="-fx-background-radius: 10; -fx-background-color: #90EE90;" text="Rachunki klientów" />
-            <Button fx:id="editAccountButton" layoutX="67.0" layoutY="336.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="82.0" style="-fx-background-radius: 10; -fx-background-color: #90EE90;" text="Otwórz" />
-            <BubbleChart layoutX="228.0" layoutY="52.0" prefHeight="178.0" prefWidth="308.0" title="jakieś statystyki">
-              <xAxis>
-                <NumberAxis side="BOTTOM" />
-              </xAxis>
-              <yAxis>
-                <NumberAxis side="LEFT" />
-              </yAxis>
-            </BubbleChart>
-            <Button fx:id="logoutButton" layoutX="502.0" layoutY="14.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="127.0" style="-fx-background-radius: 10; -fx-background-color: #90EE90;" text="Wyloguj" />
-            <Pane layoutX="245.0" layoutY="242.0" prefHeight="144.0" prefWidth="291.0">
-               <children>
-                  <Button layoutX="99.0" layoutY="99.0" mnemonicParsing="false" style="-fx-background-radius: 10; -fx-background-color: #90EE90;" text="Generuj raport" />
-                  <DatePicker layoutX="169.0" layoutY="60.0" prefHeight="25.0" prefWidth="108.0" promptText="do" />
-                  <DatePicker layoutX="14.0" layoutY="60.0" prefHeight="25.0" prefWidth="108.0" promptText="od" />
-                  <TextField layoutX="71.0" layoutY="14.0" style="-fx-background-radius: 10; -fx-background-color: #90EE90;" text="Generowanie raportu" />
-               </children>
-            </Pane>
-            </children>
-        </AnchorPane>
-    </children>
-</VBox>
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #ADD8E6;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ManagerController">
+   <children>
+      <TableView fx:id="guestTable" layoutX="103.0" layoutY="60.0" prefHeight="200.0" prefWidth="399.0">
+        <columns>
+          <TableColumn fx:id="name" prefWidth="130.0" text="Imie i Nazwisko" />
+            <TableColumn fx:id="balance" prefWidth="220.0" text="Rachunek" />
+        </columns>
+      </TableView>
+      <Label fx:id="profit" layoutX="254.0" layoutY="20.0" text="Profit:">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <PieChart fx:id="piechart" layoutX="150.0" layoutY="75.0" prefHeight="311.0" prefWidth="316.0" visible="false" />
+      <Button fx:id="btnstats" layoutX="518.0" layoutY="75.0" mnemonicParsing="false" text="Statystyki" />
+      <Button fx:id="billls" layoutX="519.0" layoutY="111.0" mnemonicParsing="false" text="Rachunki" visible="false" />
+      <Button layoutX="33.0" layoutY="30.0" mnemonicParsing="false" onAction="#wyloguj" text="wyloguj" />
+   </children>
+</Pane>
