--- a/20L2GR3/src/application/account.fxml
+++ b/20L2GR3/src/application/account.fxml
@@ -3,9 +3,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -16,42 +13,42 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #ADD8E6;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.AdminController">
    <children>
-      <TextField fx:id="surname" layoutX="220.0" layoutY="115.0" />
-      <TextField fx:id="login" layoutX="220.0" layoutY="151.0" />
-      <TextField fx:id="name" layoutX="220.0" layoutY="81.0" />
-      <ChoiceBox fx:id="choicejob" layoutX="219.0" layoutY="259.0" prefWidth="150.0" />
-      <Button fx:id="btncreate" layoutX="443.0" layoutY="299.0" mnemonicParsing="false" text="Stwórz" />
-      <Button fx:id="back" layoutX="62.0" layoutY="299.0" mnemonicParsing="false" onAction="#wyloguj" text="wyloguj" />
+      <TextField fx:id="surname" layoutX="235.0" layoutY="115.0" />
+      <TextField fx:id="login" layoutX="235.0" layoutY="151.0" />
+      <TextField fx:id="name" layoutX="235.0" layoutY="81.0" />
+      <ChoiceBox fx:id="choicejob" layoutX="235.0" layoutY="259.0" prefWidth="150.0" />
+      <Button fx:id="btncreate" layoutX="350.0" layoutY="299.0" mnemonicParsing="false"  prefWidth="176.0" text="Stwórz" />
+      <Button fx:id="back" layoutX="18.0" layoutY="299.0" mnemonicParsing="false" onAction="#wyloguj" prefHeight="25.0" prefWidth="101.0" text="wyloguj" />
       <Text fx:id="header" fill="#2b579a" layoutX="185.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Stworz Konto">
          <font>
             <Font size="39.0" />
          </font>
       </Text>
-      <Label fx:id="lblname" layoutX="142.0" layoutY="85.0" text="Imie" />
-      <Label fx:id="lblsurname" layoutX="142.0" layoutY="119.0" text="Nazwisko" />
-      <Label fx:id="lbllogin" layoutX="142.0" layoutY="155.0" text="Login" />
-      <Label fx:id="lblpassword" layoutX="142.0" layoutY="192.0" text="Haslo" />
-      <Label fx:id="lblrpassword" layoutX="142.0" layoutY="227.0" text="Powtorz haslo" />
-      <Label fx:id="lbjob" layoutX="142.0" layoutY="263.0" text="Zawód" />
-      <PasswordField fx:id="password" layoutX="220.0" layoutY="188.0" />
-      <PasswordField fx:id="rpassword" layoutX="220.0" layoutY="223.0" />
-      <MenuBar layoutY="2.0">
-        <menus>
-          <Menu mnemonicParsing="false" text="Konta">
-            <items>
-              <MenuItem mnemonicParsing="false" onAction="#showCreate" text="Stworz Pracownika" />
-                  <MenuItem mnemonicParsing="false" onAction="#showTable" text="Wyswietl Pracownikow" />
-            </items>
-          </Menu>
-        </menus>
-      </MenuBar>
-      <TableView fx:id="accounts" layoutX="79.0" layoutY="57.0" prefHeight="207.0" prefWidth="474.0" visible="false">
+      <Label fx:id="lblname" layoutX="160.0" layoutY="85.0" text="Imie" />
+      <Label fx:id="lblsurname" layoutX="160.0" layoutY="119.0" text="Nazwisko" />
+      <Label fx:id="lbllogin" layoutX="160.0" layoutY="155.0" text="Login" />
+      <Label fx:id="lblpassword" layoutX="160.0" layoutY="192.0" text="Haslo" />
+      <Label fx:id="lblrpassword" layoutX="160.0" layoutY="227.0" text="Powtorz haslo" />
+      <Label fx:id="lbjob" layoutX="160.0" layoutY="263.0" text="Zawód" />
+      <PasswordField fx:id="password" layoutX="235.0" layoutY="188.0" />
+      <PasswordField fx:id="rpassword" layoutX="235.0" layoutY="223.0" />
+      <TableView fx:id="accounts" layoutX="155.0" layoutY="45.0" prefHeight="268.0" prefWidth="404.0" visible="false">
         <columns>
           <TableColumn fx:id="tablename" prefWidth="53.0" text="Imie" />
           <TableColumn fx:id="tablenazwisko" prefWidth="64.0" text="Nazwisko" />
-            <TableColumn fx:id="tablelogin" prefWidth="53.0" text="Login" />
-            <TableColumn fx:id="tablezawod" prefWidth="98.0" text="Zawód" />
+            <TableColumn fx:id="tablelogin" prefWidth="122.0" text="Login" />
+            <TableColumn fx:id="tablezawod" prefWidth="163.0" text="Zawód" />
+    
         </columns>
       </TableView>
+      <Button fx:id="btndelete" layoutX="345.0" layoutY="320.0" mnemonicParsing="false" onAction="#deleteuser" prefHeight="25.0" prefWidth="176.0" text="Usuń " visible="false" />
+      <Button fx:id="btnedit" layoutX="155.0" layoutY="320.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="176.0" text="Edytuj" visible="false" />
+      <Label fx:id="find" layoutX="160.0" layoutY="17.0" text="Szukaj" visible="false">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font></Label>
+      <TextField fx:id="textviewfind" layoutX="220.0" layoutY="15.0" onKeyReleased="#search" prefHeight="25.0" prefWidth="261.0" visible="false" />
+      <Button layoutX="14.0" layoutY="90.0" mnemonicParsing="false" onAction="#showTable" prefHeight="25.0" prefWidth="124.0" text="Spis Pracownikow" />
+      <Button layoutX="14.0" layoutY="128.0" mnemonicParsing="false" onAction="#showCreate" prefHeight="25.0" prefWidth="124.0" text="Stwórz Pracownika" />
    </children>
 </Pane>
