--- a/20L2GR3/src/application/Receptionist.fxml
+++ b/20L2GR3/src/application/Receptionist.fxml
@@ -41,15 +41,15 @@
       </TableView>
       <Button fx:id="dodajroom" layoutX="506.0" layoutY="339.0" mnemonicParsing="false" style="-fx-background-color: #90EE90; -fx-background-radius: 10;" text="Zarezerwuj" />
       <TextField fx:id="opistask" layoutX="223.0" layoutY="100.0" prefHeight="25.0" prefWidth="168.0" visible="false" />
-      <ChoiceBox fx:id="choiceservice" layoutX="223.0" layoutY="140.0" prefWidth="168.0" visible="false" />
-      <ChoiceBox fx:id="choiceroomfortask" layoutX="223.0" layoutY="180.0" prefWidth="168.0" visible="false" />
-      <ChoiceBox fx:id="choiceuser" layoutX="-132.0" layoutY="178.0" prefWidth="169.0" visible="false" />
+      <ChoiceBox fx:id="choiceservice" layoutX="223.0" layoutY="100.0" prefWidth="168.0" visible="false" />
+      <ChoiceBox fx:id="choiceroomfortask" layoutX="223.0" layoutY="140.0" prefWidth="168.0" visible="false" />
+      <ChoiceBox fx:id="choiceuser" layoutX="223.0" layoutY="180" onMouseClicked="#addTask" prefWidth="169.0" visible="false" />
       <Button fx:id="addtask" layoutX="348.0" layoutY="305.0" mnemonicParsing="false" text="Dodaj zadanie" visible="false" />
-      <DatePicker fx:id="datapick" layoutX="9.0" layoutY="327.0" visible="false" />
-      <TextField fx:id="nameguest" layoutX="404.0" layoutY="173.0" visible="false" />
-      <TextField fx:id="surnameguest" layoutX="404.0" layoutY="203.0" visible="false" />
-      <Button fx:id="createreservation" layoutX="354.0" layoutY="233.0" mnemonicParsing="false" onAction="#addGuest" text="Wyslij" visible="false" />
-      <DatePicker fx:id="enddatepicker" layoutX="22.0" layoutY="364.0" visible="false" />
+      <DatePicker fx:id="datapick" layoutX="30.0" layoutY="327.0" visible="false" />
+      <TextField fx:id="nameguest" layoutX="404.0" layoutY="173.0" promptText="Imie" visible="false" />
+      <TextField fx:id="surnameguest" layoutX="404.0" layoutY="223.0" promptText="Nazwisko" visible="false" />
+      <Button fx:id="createreservation" layoutX="404.0" layoutY="280.0" mnemonicParsing="false" onAction="#addGuest" text="Wyslij" visible="false" />
+      <DatePicker fx:id="enddatepicker" layoutX="30.0" layoutY="364.0" visible="false" />
       <Label fx:id="lbldatereser" layoutX="110.0" layoutY="113.0" text="Data Poczatku Rezerwacji" visible="false" />
       <Label fx:id="lbldateend" layoutX="110.0" layoutY="143.0" text="Data Końca Rezerwacji" visible="false" />
       <Label fx:id="lblimie" layoutX="140.00" layoutY="173.0" prefWidth="23.0" text="Imie" visible="false" />
