Przebudowa dodawania zadan

--- a/20L2GR3/src/application/Receptionist.fxml
+++ b/20L2GR3/src/application/Receptionist.fxml
@@ -41,10 +41,10 @@
       </TableView>
       <Button fx:id="dodajroom" layoutX="506.0" layoutY="339.0" mnemonicParsing="false" style="-fx-background-color: #90EE90; -fx-background-radius: 10;" text="Zarezerwuj" />
       <TextField fx:id="opistask" layoutX="223.0" layoutY="100.0" prefHeight="25.0" prefWidth="168.0" visible="false" />
-      <ChoiceBox fx:id="choiceservice" layoutX="223.0" layoutY="100.0" prefWidth="168.0" visible="false" />
-      <ChoiceBox fx:id="choiceroomfortask" layoutX="223.0" layoutY="140.0" prefWidth="168.0" visible="false" />
-      <ChoiceBox fx:id="choiceuser" layoutX="223.0" layoutY="180" onMouseClicked="#addTask" prefWidth="169.0" visible="false" />
-      <Button fx:id="addtask" layoutX="348.0" layoutY="305.0" mnemonicParsing="false" text="Dodaj zadanie" visible="false" />
+      <ChoiceBox fx:id="choiceservice" layoutX="223.0" layoutY="140.0" onAction="#serviceChoiceBoxeEvent" prefWidth="168.0" visible="false" />
+      <ChoiceBox fx:id="choiceroomfortask" layoutX="223.0" layoutY="180.0" prefWidth="168.0" visible="false" />
+      <ChoiceBox fx:id="choiceuser" layoutX="223.0" layoutY="100" onAction="#userChoiceBoxeEvent" prefWidth="169.0" visible="false" />
+      <Button fx:id="addtask" layoutX="348.0" layoutY="305.0" mnemonicParsing="false" onAction="#inputTask" text="Dodaj zadanie" visible="false" />
       <DatePicker fx:id="datapick" layoutX="30.0" layoutY="327.0" visible="false" />
       <TextField fx:id="nameguest" layoutX="404.0" layoutY="173.0" promptText="Imie" visible="false" />
       <TextField fx:id="surnameguest" layoutX="404.0" layoutY="223.0" promptText="Nazwisko" visible="false" />
