--- a/20L2GR3/src/application/manager.fxml
+++ b/20L2GR3/src/application/manager.fxml
@@ -10,20 +10,29 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #ADD8E6;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ManagerController">
    <children>
-      <TableView fx:id="guestTable" layoutX="103.0" layoutY="60.0" prefHeight="200.0" prefWidth="399.0">
+      <Button fx:id="statstobills" layoutX="484.0" layoutY="65.0" mnemonicParsing="false" onAction="#screenGuest" prefHeight="35.0" prefWidth="135.0" text="Rachunki" visible="false" />
+      <TableView fx:id="guestTable" layoutX="62.0" layoutY="55.0" prefHeight="200.0" prefWidth="399.0">
         <columns>
           <TableColumn fx:id="name" prefWidth="130.0" text="Imie i Nazwisko" />
             <TableColumn fx:id="balance" prefWidth="220.0" text="Rachunek" />
+          <TableColumn fx:id="countedreservation" prefWidth="297.0" text="Liczba rezerwacji" />
         </columns>
       </TableView>
-      <Label fx:id="profit" layoutX="254.0" layoutY="20.0" text="Profit:">
+      <Label fx:id="profit" layoutX="215.0" layoutY="13.0" text="Profit:">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
       <PieChart fx:id="piechart" layoutX="150.0" layoutY="75.0" prefHeight="311.0" prefWidth="316.0" visible="false" />
-      <Button fx:id="btnstats" layoutX="518.0" layoutY="75.0" mnemonicParsing="false" text="Statystyki" />
-      <Button fx:id="billls" layoutX="519.0" layoutY="111.0" mnemonicParsing="false" text="Rachunki" visible="false" />
+      <Button fx:id="btnstats" layoutX="484.0" layoutY="65.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="113.0" text="Statystyki" />
+      <Button fx:id="billls" layoutX="484.0" layoutY="130.0" mnemonicParsing="false" onAction="#screenGuest" prefHeight="35.0" prefWidth="135.0" text="Rachunki" visible="false" />
       <Button layoutX="33.0" layoutY="30.0" mnemonicParsing="false" onAction="#wyloguj" text="wyloguj" />
+      <TableView fx:id="reservationRooms" layoutX="62.0" layoutY="55.0" prefHeight="200.0" prefWidth="399.0" visible="false">
+        <columns>
+          <TableColumn fx:id="numberRoom" prefWidth="101.0" text="Numer pokoju" />
+            <TableColumn fx:id="countedreservation" prefWidth="297.0" text="Liczba Rezerwacji" />
+        </columns>
+      </TableView>
+      <Button fx:id="swapforcount" layoutX="484.0" layoutY="130.0" mnemonicParsing="false" onAction="#setTable" prefHeight="35.0" prefWidth="113.0" text="Rezerwacje pokoi" />
    </children>
 </Pane>
