--- a/20L2GR3/src/application/Receptionist.fxml
+++ b/20L2GR3/src/application/Receptionist.fxml
@@ -44,9 +44,9 @@
       <ChoiceBox fx:id="choiceservice" layoutX="223.0" layoutY="140.0" onAction="#serviceChoiceBoxeEvent" prefWidth="168.0" visible="false" />
       <ChoiceBox fx:id="choiceroomfortask" layoutX="223.0" layoutY="180.0" prefWidth="168.0" visible="false" />
       <ChoiceBox fx:id="choiceuser" layoutX="223.0" layoutY="100" onAction="#userChoiceBoxeEvent" prefWidth="169.0" visible="false" />
-      <Button fx:id="addtask" layoutX="348.0" layoutY="305.0" mnemonicParsing="false" onAction="#inputTask" text="Dodaj zadanie" visible="false" />
-      <DatePicker fx:id="datapick" layoutX="30.0" layoutY="327.0" visible="false" />
       <TextField fx:id="nameguest" layoutX="404.0" layoutY="173.0" promptText="Imie" visible="false" />
+      <DatePicker fx:id="datapick" layoutX="30.0" layoutY="327.0" visible="false" />
+      <Button fx:id="addtask" layoutX="348.0" layoutY="305.0" mnemonicParsing="false" onAction="#inputTask" text="Dodaj zadanie" visible="false" />
       <TextField fx:id="surnameguest" layoutX="404.0" layoutY="223.0" promptText="Nazwisko" visible="false" />
       <Button fx:id="createreservation" layoutX="404.0" layoutY="280.0" mnemonicParsing="false" onAction="#addGuest" text="Wyslij" visible="false" />
       <DatePicker fx:id="enddatepicker" layoutX="30.0" layoutY="364.0" visible="false" />
@@ -63,6 +63,10 @@
             <TableColumn fx:id="dateLvlColumn" prefWidth="75.0" text="poziom" />
         </columns>
       </TableView>
+      <TextField fx:id="descriptionTextField" layoutX="223.0" layoutY="220.0" />
+      <Label fx:id="userChoiceLabel" layoutX="96.0" layoutY="100" text="Uzytkownik" />
+      <Label fx:id="roomChoiceLabel" layoutX="96.0" layoutY="180.0" text="Pokoj" />
+      <Label fx:id="serviceChoiceLabel" layoutX="96.0" layoutY="140.0" text="Usluga" />
      
     
    </children>
