--- a/20L2GR3/src/application/application.css
+++ b/20L2GR3/src/application/application.css
@@ -1,1 +1,6 @@
 /* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
+.button{
+	-fx-background-radius: 10; 
+	-fx-background-color: #90EE90;
+	
+}
