--- a/20L2GR3/src/application/Receptionist.fxml
+++ b/20L2GR3/src/application/Receptionist.fxml
@@ -16,9 +16,9 @@
       <TableView fx:id="freeRooms" layoutX="95.0" layoutY="87.0" prefHeight="200.0" prefWidth="483.0" style="-fx-background-color: #90EE90;">
         <columns>
               
-              	<TableColumn id="room_numbefr" fx:id="roomNumberF" prefWidth="62.4000244140625" text="Nr_Pokoju" />
-                <TableColumn id="number_of_seatsf" fx:id="numberOfSeatsF" prefWidth="80.0" text="Miejsca" />
-                <TableColumn id="lvlf" fx:id="lvlF" prefWidth="115" text="Poziom" />
+              	<TableColumn style="-fx-alignment: CENTER;" id="room_numbefr" fx:id="roomNumberF" prefWidth="142.0" text="Nr_Pokoju" />
+                <TableColumn style="-fx-alignment: CENTER;" id="number_of_seatsf" fx:id="numberOfSeatsF" prefWidth="145.0" text="Miejsca" />
+                <TableColumn style="-fx-alignment: CENTER;" id="lvlf" fx:id="lvlF" prefWidth="145.0" text="Poziom" />
                
        </columns>
       </TableView>
@@ -32,11 +32,11 @@
       <TableView fx:id="takenRooms" layoutX="97.0" layoutY="87.0" prefHeight="200.0" prefWidth="483.0" style="-fx-background-color: #90EE90;">
 		<columns>
                 
-                  <TableColumn id="room_number" fx:id="roomNumber" prefWidth="62.4000244140625" text="Nr_Pokoju" />
-                  <TableColumn id="number_of_seats" fx:id="numberOfSeats" prefWidth="80.0" text="Miejsca" />
-                  <TableColumn id="lvl" fx:id="lvl" prefWidth="52.0" text="Poziom" />
-                  <TableColumn id="dates" fx:id="dates" minWidth="0.0" prefWidth="123.0" text="Data_zabukowania" />
-           		 <TableColumn id="dates" fx:id="enddate" prefWidth="200.0" text="Data_zakonczenia" />
+                  <TableColumn style="-fx-alignment: CENTER;" id="room_number" fx:id="roomNumber" prefWidth="62.4000244140625" text="Nr_Pokoju" />
+                  <TableColumn style="-fx-alignment: CENTER;" id="number_of_seats" fx:id="numberOfSeats" prefWidth="80.0" text="Miejsca" />
+                  <TableColumn style="-fx-alignment: CENTER;" id="lvl" fx:id="lvl" prefWidth="52.0" text="Poziom" />
+                  <TableColumn style="-fx-alignment: CENTER;" id="dates" fx:id="dates" minWidth="0.0" prefWidth="123.0" text="Data_zabukowania" />
+           		 <TableColumn style="-fx-alignment: CENTER;" id="dates" fx:id="enddate" prefWidth="200.0" text="Data_zakonczenia" />
               </columns>
       </TableView>
       <Button fx:id="dodajroom" layoutX="506.0" layoutY="339.0" mnemonicParsing="false" style="-fx-background-color: #90EE90; -fx-background-radius: 10;" text="Zarezerwuj" />
@@ -56,11 +56,11 @@
       <Label fx:id="lblnazwisko" layoutX="140.0" layoutY="203.0" text="Nazwisko" visible="false" />
       <Button fx:id="addTaskButton" layoutX="319.0" layoutY="339.0" mnemonicParsing="false" onAction="#dodajzadanie" style="-fx-background-color: #90EE90; -fx-background-radius: 10;" text="Dodaj Zadanie" />
       <Button fx:id="mainTableButton" layoutX="37.0" layoutY="23.0" mnemonicParsing="false" onAction="#glowna" style="-fx-background-radius: 10; -fx-background-color: #90EE90;" text="powrót" />
-      <TableView fx:id="dateRoomsTable" layoutX="30.0" layoutY="87.0" prefHeight="232.0" prefWidth="305.0">
+      <TableView fx:id="dateRoomsTable" layoutX="30.0" layoutY="87.0" prefHeight="239.0" prefWidth="305.0">
         <columns>
-          <TableColumn fx:id="dateRoomNumberColumn" prefWidth="75.0" text="nr pokoju" />
-          <TableColumn fx:id="dateSizeColumn" prefWidth="75.0" text="miejsca" />
-            <TableColumn fx:id="dateLvlColumn" prefWidth="75.0" text="poziom" />
+          <TableColumn style="-fx-alignment: CENTER;" fx:id="dateRoomNumberColumn" prefWidth="105.0" text="nr pokoju" />
+          <TableColumn style="-fx-alignment: CENTER;" fx:id="dateSizeColumn" prefWidth="100.0" text="miejsca" />
+            <TableColumn style="-fx-alignment: CENTER;" fx:id="dateLvlColumn" prefWidth="100.0" text="poziom" />
         </columns>
       </TableView>
       <TextField fx:id="descriptionTextField" layoutX="223.0" layoutY="220.0" />
