--- a/20L2GR3/src/application/manager.fxml
+++ b/20L2GR3/src/application/manager.fxml
@@ -11,12 +11,12 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #ADD8E6;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ManagerController">
    <children>
-      <Button fx:id="statstobills" layoutX="484.0" layoutY="65.0" mnemonicParsing="false" onAction="#guest" prefHeight="35.0" prefWidth="135.0" text="Rachunki" visible="false" />
+      <Button fx:id="statstobills" layoutX="484.0" layoutY="65.0" mnemonicParsing="false" onAction="#screenGuest" prefHeight="35.0" prefWidth="135.0" text="Rachunki" visible="false" />
       <TableView fx:id="guestTable" layoutX="62.0" layoutY="55.0" prefHeight="200.0" prefWidth="399.0">
         <columns>
-          <TableColumn fx:id="name" prefWidth="130.0" text="Imie i Nazwisko" />
-            <TableColumn fx:id="balance" prefWidth="220.0" text="Rachunek" />
-          <TableColumn fx:id="countedreservation" prefWidth="297.0" text="Liczba rezerwacji" />
+          <TableColumn style="-fx-alignment: CENTER;" fx:id="name" prefWidth="130.0" text="Imie i Nazwisko" />
+           <TableColumn style="-fx-alignment: CENTER;" fx:id="balance" prefWidth="220.0" text="Rachunek" />
+          
         </columns>
       </TableView>
       <Label fx:id="profit" layoutX="215.0" layoutY="13.0" text="Profit:">
@@ -26,12 +26,12 @@
       </Label>
       <PieChart fx:id="piechart" layoutX="150.0" layoutY="75.0" prefHeight="311.0" prefWidth="316.0" visible="false" />
       <Button fx:id="btnstats" layoutX="484.0" layoutY="65.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="113.0" text="Statystyki" />
-      <Button fx:id="billls" layoutX="484.0" layoutY="130.0" mnemonicParsing="false" onAction="#guest" prefHeight="35.0" prefWidth="135.0" text="Rachunki" visible="false" />
+      <Button fx:id="billls" layoutX="484.0" layoutY="130.0" mnemonicParsing="false" onAction="#screenGuest" prefHeight="35.0" prefWidth="113.0" text="Rachunki" visible="false" />
       <Button layoutX="22.0" layoutY="8.0" mnemonicParsing="false" onAction="#wyloguj" prefHeight="35.0" prefWidth="89.0" text="wyloguj" />
       <TableView fx:id="reservationRooms" layoutX="62.0" layoutY="55.0" prefHeight="200.0" prefWidth="399.0" visible="false">
         <columns>
-          <TableColumn fx:id="numberRoom" prefWidth="101.0" text="Numer pokoju" />
-            <TableColumn fx:id="countedreservation" prefWidth="297.0" text="Liczba Rezerwacji" />
+          <TableColumn style="-fx-alignment: CENTER;" fx:id="numberRoom" prefWidth="101.0" text="Numer pokoju" />
+            <TableColumn style="-fx-alignment: CENTER;" fx:id="countedreservation" prefWidth="285.0" text="Liczba Rezerwacji" />
         </columns>
       </TableView>
        <Button fx:id="pdfGenerate" layoutX="210.0" layoutY="320.0" mnemonicParsing="false" onAction="#generatePdf" prefHeight="74.0" prefWidth="120.0" text="generuj pdf" />
@@ -39,7 +39,7 @@
       <TextField fx:id="textfieldtofind" layoutX="197.0" layoutY="272.0" onKeyReleased="#search" prefHeight="28.0" prefWidth="204.0" visible="false" />
       <Label fx:id="lblfind" layoutX="140.0" layoutY="277.0" text="Szukaj" visible="false">
          <font>
-            <Font name="System Bold" size="15.0" />
+            <Font name="System Bold" size="15.0" />	
          </font>
       </Label>
    </children>
